Added the column look, added jQuery function to resize columns on window resize

--- a/style.css
+++ b/style.css
@@ -63,3 +63,9 @@ HTML Boilerplate styles can be found in the html5-boilerplate/css directory.
 .sticky h2 {
 	padding-top: 10px;
 }
+
+body {
+	padding: 2em;
+	font-size: 16px;
+	background: #ddd;
+}
