--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: The HTML5 Boilerplate
+Theme Name: Andrew Theme
 Theme URI: http://github.com/zencoder/html5-boilerplate-for-wordpress
-Description: Based on the <a href="http://html5boilerplate.com">HTML5 Boilerplate</a> and Bruce Lawson's <a href="http://html5doctor.com/designing-a-blog-with-html5/">Designing a Blog with HTML5</a>. The sole purpose of this theme is to save developers the time it takes to apply the HTML5 Boilerplate to WordPress. See the README for instructions. The "HTML5 Boilerplate" name is used with permission from Paul Irish.
+Description: Based on the html5-boilerplate-for-wordpress theme, and the nonfeed theme from Cargo Collective
 Version: 1.0
 Author: Steve Heffernan
 Author URI: http://steveheffernan.com/
