--- a/articles.scss
+++ b/articles.scss
@@ -31,14 +31,15 @@ body {
 
 #main {
 	width: 100%;
-	padding: 80px 32px 0px;
+	/* 	padding-top must = the size of the menubar
+			and should also be the same as the offset in footer.php */
+	padding: 80px 0px 0px;
 	div.comments-container, article.post {
 		width: $main_column;
 		overflow-x: hidden;
 		background-color: #fff;
 		margin: 24px auto 0;
 		padding: 0 20px;
-		
 		font-size: 0.8em;
 		h1, h2, h3 {
 			text-align: left;
@@ -54,7 +55,7 @@ body {
 		}
 	}
 	article.post {
-		padding: 0 20px;
+		padding: 0 20px 20px;
 		h2 {
 			text-align: center;
 		}
@@ -67,10 +68,15 @@ body {
 			}
 		}
 	}
+	article.category-empty {
+		#searchform {
+			text-align: center;
+		}
+	}
 }
 
 /* Styles for block display on home page */
-body.home #main {
+body.home #main, body.archive #main {
 	/* We will keep the scroll bars on the overflow-x */
 	overflow-x: auto;
 	position: relative;
@@ -83,7 +89,7 @@ body.home #main {
 	}
 	.article-container-wrapper {
 		overflow: hidden;
-		width: 440px;
+		width: $column_width + 20;
 		display: block;
 		float: left;
 	}
@@ -99,7 +105,7 @@ body.home #main {
 		/* Need to still scroll, while hiding overflow-y scrollbars */
 		overflow-x: hidden;
 		overflow-y: auto;
-		width: 420px;
+		width: $column_width;
 		padding-right: 80px;
 		article.post {
 			margin: 0px 20px 20px 20px;
@@ -107,7 +113,7 @@ body.home #main {
 			width: 360px;
 			overflow: hidden;
 			position: static;
-			h2 {
+			h2, h3 {
 				text-align: center;
 				margin: 0;
 			}
